try to fix code climate